--- a/FLASK-WEB-APP-with-docker-main/FLASK-WEB-APP-with-docker-main/website/static/Teamstyle.css
+++ b/FLASK-WEB-APP-with-docker-main/FLASK-WEB-APP-with-docker-main/website/static/Teamstyle.css
@@ -28,19 +28,56 @@ body{
     background: #0b2545;
     transition: 0.5s;
 }
-.logout-btn {
-    padding: 10px 20px;
-    background-color: #0d0961;
+.header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    background-color: #34495e;
+}
+
+.header .flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navbar {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.navbar a {
+    margin: 0 15px;
     color: #fff;
-    border: none;
-    border-radius: 4px;
+    font-size: 18px;
+    text-decoration: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.navbar a:hover {
+    color: var(--blue);
+}
+
+.logout-btn {
+    margin: 0 15px;
+    color: #fff;
+    font-size: 18px;
+    text-decoration: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    background-color: transparent;
+    border: 2px solid #fff;
     cursor: pointer;
-    transition: background-color 0.3s ease;
-    margin-bottom: 650px; 
+    transition: background-color 0.3s, color 0.3s;
 }
 
 .logout-btn:hover {
-    background-color: #081e8f;
+    background-color: var(--blue);
 }
 
 .container{
